# Test

./: .clinerules  .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: code_execution.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: __init__.py  submission.py
backend/app/schemas/: __init__.py  submission.py
backend/app/services/: code_execution.py  code_validator.py  lambda_execution.py  submission.py
docker/: .env.example  Dockerfile.execution  docker-compose.yml
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CodeEditor.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
security-tests/: README.md  conftest.py  pytest.ini  requirements.txt  run_security_tests.py  security_audit.py  test_api_security.py  test_code_injection.py  test_docker_security.py  test_import_bypass.py  test_lambda_security.py  test_penetration.py  test_resource_exhaustion.py  test_validation_bypass.py
